Fixed: wflow-consoleweb - X-Admin Theme - Popup select form field button misaligned in smaller screen widths. @8.1-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/custom.css
@@ -6019,3 +6019,9 @@ body.rtl .ContainerComponent {
 html.adminBarShown {
     padding-bottom: 0px;
 }
+@media(max-width: 480px) {
+    /* field label */
+    body.rtl #form-canvas .form-cell .label {
+        text-align: right;
+    }
+}
